fix: Google login (WebClient), update: skill